Addition of styles.css sheet

--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeremy Hansma</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <p>hi</p>
+    <menu>
+        <div class="logo">
+            <img src="./images/logo.png" alt="logo">
+        </div>
+    </menu>
+    <header>
+        <div class="image">
+            <img src="./images/Portfolio" alt="Picture of an animated Jeremy.">
+            <div class="name"</div>
+                <h1 class="jer">Jeremy</h1>
+                <h1 class="han">Hansma</h1>
+            </div
+        </div>
+        
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
